--- a/responsive-web-design-projects/portfolio/portfolio.html
+++ b/responsive-web-design-projects/portfolio/portfolio.html
@@ -58,16 +58,28 @@
           <h2>Started learning how to code</h2>
           <div class="timeline-content-info">
           </div>
-          <p>I began learning how to code by using free online resources such as FreeCodeCamp.</p>
-          <p>Languages learnt include:</p>
+          <p>I began learning how to code by using online resources such as FreeCodeCamp and Udemy</p>
+          <p>Coding languages:</p>
           <span class="cd-date" id="first-date">July 2022</span>
           <ul class="content-skills">
             <li>HTML5</li>
             <li>CSS3</li>
             <li>JavaScript</li>
-            <li>Bootstrap 5</li>
             <li>PHP</li>
             <li>Python 3</li>
+          </ul>
+          <p>Front end frameworks:</p>
+          <span class="cd-date" id="first-date">July 2022</span>
+          <ul class="content-skills">
+            <li>Bootstrap 5</li>
+          </ul>
+          <p>Developer tools:</p>
+          <span class="cd-date" id="first-date">July 2022</span>
+          <ul class="content-skills">
+            <li>VSCode</li>
+            <li>Git</li>
+            <li>Github</li>
+            <li>Linux terminal</li>
           </ul>
         </div> <!-- cd-timeline-content -->
       </div> <!-- cd-timeline-block -->
@@ -83,11 +95,11 @@
           <p>Other things I want to achieve/learn before 2024 include:</p>
           <ul class="content-skills">
             <li>React</li>
-            <li>CI/CD</li>
             <li>TypeScript</li>
-            <li>Cybersecurity</li>
-            <li>AWS</li>
-            <li>Have a beautiful portfolio</li>
+            <li>Cloud</li>
+            <li>CI/CD</li>
+            <li>Agile/Scrum/Kanban</li>
+            <li>Awesome portfolio</li>
           </ul>
           <span class="cd-date" id="second-date">Present</span>
         </div> <!-- cd-timeline-content -->
